# bing-ads-mcp

./: .gitignore  README.md  bing-ads.yaml.example  pyproject.toml
bing_ads_mcp/: auth_setup.py  coordinator.py  server.py  utils.py
bing_ads_mcp/tools/: ad_groups.py  ads.py  campaigns.py  core.py  keywords.py  reporting.py
